--- a/AVStack.IdentityServer.Common/AVStack.IdentityServer.Common.csproj
+++ b/AVStack.IdentityServer.Common/AVStack.IdentityServer.Common.csproj
@@ -2,10 +2,15 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>AVStack.IdentityServer</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="IdentityServer4.Storage" Version="4.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Configuration" />
     </ItemGroup>
 
 </Project>
