--- a/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
+++ b/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
@@ -6,26 +6,27 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
         <PackageReference Include="AVStack.MessageBus.Extensions" Version="1.0.0" />
         <PackageReference Include="AVStack.MessageBus.RabbitMQ" Version="1.0.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
         <PackageReference Include="IdentityServer4" Version="4.1.2" />
         <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+        <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
+        <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="4.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Migrations" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\AVStack.IdentityServer\AVStack.IdentityServer.csproj" />
+      <ProjectReference Include="..\AVStack.IdentityServer.Common\AVStack.IdentityServer.Common.csproj" />
     </ItemGroup>
 
 </Project>
