Identity and IdentityServer contexts now pointing to different databases

--- a/AVStack.IdentityServer.WebApi/appsettings.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityServerDb": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
+    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
+    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
   },
   "RabbitMQ": {
     "Uri": "amqp://admin:PaSSW0rd123!@server:5672/",
@@ -45,11 +46,21 @@
       "RequireConfirmedAccount": false
     }
   },
-  "IdentityServerStore": {
-    "Clients": [],
-    "ApiResources": [],
-    "ApiScopes": [],
-    "IdentityResources": []
+  "IdentityServerOptions": {
+    "UserInteraction": {
+      "LoginUrl": "http://localhost:4200/account/sign-in",
+      "LoginReturnUrlParameter": "",
+      "LogoutUrl": "http://localhost:4200/account/sign-out",
+      "LogoutIdParameter": "",
+      "ConsentUrl": "http://localhost:4200/account/consent",
+      "ConsentReturnUrlParameter": "",
+      "ErrorUrl": "http://localhost:4200/account/error",
+      "ErrorIdParameter": "",
+      "CustomRedirectReturnUrlParameter": "",
+      "CookieMessageThreshold": "",
+      "DeviceVerificationUrl": "http://localhost:4200/account/device-verification",
+      "DeviceVerificationUserCodeParameter": ""
+    }
   }
   
 }
