--- a/AVStack.IdentityServer.WebApi/appsettings.Development.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityServerDb": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
+    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
+    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
   },
   "RabbitMQ": {
     "Uri": "amqp://admin:PaSSW0rd123!@server:5672/",
