--- a/AVStack.IdentityServer.WebApi/appsettings.Development.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.Development.json
@@ -1,10 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimalLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -19,17 +29,21 @@
     "UserName": "admin",
     "Password": "PaSSW0rd123!"
   },
+  "AdminUIClientOptions": {
+    "Origin": "http://localhost:4200",
+    "EmailConfirmationUrl": "http://localhost:4200/account/email-confirmation"
+  },
   "IdentityOptions":{
     "ClaimsIdentityOptions": {
       "SecurityStampClaimType": "AVStack.Identity.SecurityStamp"
     },
     "PasswordOptions": {
       "RequiredLength": 6,
-      "RequiredUniqueChars": 1,
-      "RequireNonAlphanumeric": true,
-      "RequireLowercase": true,
-      "RequireUppercase": true,
-      "RequireDigit": true
+      "RequiredUniqueChars": 0,
+      "RequireNonAlphanumeric": false,
+      "RequireLowercase": false,
+      "RequireUppercase": false,
+      "RequireDigit": false
     },
     "LockoutOptions": {
       "AllowedForNewUsers": true,
@@ -46,11 +60,20 @@
       "RequireConfirmedAccount": false
     }
   },
-  "IdentityServerStore": {
-    "Clients": [],
-    "ApiResources": [],
-    "ApiScopes": [],
-    "IdentityResources": []
+  "IdentityServerOptions": {
+    "UserInteraction": {
+      "LoginUrl": "http://localhost:4200/account/sign-in",
+      "LoginReturnUrlParameter": "",
+      "LogoutUrl": "http://localhost:4200/account/sign-out",
+      "LogoutIdParameter": "",
+      "ConsentUrl": "http://localhost:4200/account/consent",
+      "ConsentReturnUrlParameter": "",
+      "ErrorUrl": "http://localhost:4200/account/error",
+      "ErrorIdParameter": "",
+      "CustomRedirectReturnUrlParameter": "",
+      "CookieMessageThreshold": "",
+      "DeviceVerificationUrl": "http://localhost:4200/account/device-verification",
+      "DeviceVerificationUserCodeParameter": ""
+    }
   }
-
 }
