Dockerfile and appsettings.json fixed

--- a/AVStack.IdentityServer.WebApi/appsettings.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -9,12 +9,12 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
-    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
+    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=postgres;Port=5432;Database=AVAccount;",
+    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=postgres;Port=5432;Database=AVIdentityServer;"
   },
   "RabbitMQ": {
-    "Uri": "amqp://admin:PaSSW0rd123!@server:5672/",
-    "HostName": "server",
+    "Uri": "amqp://admin:PaSSW0rd123!@rabbitmq:5672/",
+    "HostName": "rabbitmq",
     "VirtualHost": "/",
     "Port": 5672,
     "UserName": "admin",
