--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,4 +13,16 @@ COPY ./*/*.csproj ./
 RUN for file in $(ls *.csproj); do mkdir -p ${file%.*}/ && mv $file ${file%.*}/; done
 
 RUN dotnet restore "AVStack.IdentityServer.sln" -s https://api.nuget.org/v3/index.json -s /tmp/LocalNugets
-ENTRYPOINT ["dotnet run"]
+
+COPY . .
+
+WORKDIR "/src"
+RUN dotnet build "AVStack.IdentityServer.sln" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "AVStack.IdentityServer.sln" -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "AVStack.IdentityServer.WebApi.dll"]
