--- a/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
+++ b/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data\Repositories" />
       <Folder Include="Services\Interfaces" />
     </ItemGroup>
 
