--- a/AVStack.IdentityServer.WebApi/appsettings.Development.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.Development.json
@@ -18,11 +18,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=postgres;Port=5432;Database=AVAccount;",
-    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=postgres;Port=5432;Database=AVIdentityServer;"
+    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
+    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
   },
   "RabbitMQ": {
-    "Uri": "amqp://admin:PaSSW0rd123!@rabbitmq:5672/",
+    "Uri": "amqp://admin:PaSSW0rd123!@server:5672/",
     "HostName": "rabbitmq",
     "VirtualHost": "/",
     "Port": 5672,
