UserLoginHistory table added

--- a/AVStack.IdentityServer.WebApi/appsettings.Development.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.Development.json
@@ -16,6 +16,9 @@
       }
     ]
   },
+  "Certificates": {
+	"Thumbprint": "15FADDE7A891BD8553CFB31556E25FF7A790040C"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
