code-cleanup and minor changes applied

--- a/AVStack.IdentityServer.WebApi/appsettings.Development.json
+++ b/AVStack.IdentityServer.WebApi/appsettings.Development.json
@@ -16,22 +16,33 @@
       }
     ]
   },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "Certificates": {
-	"Thumbprint": "15FADDE7A891BD8553CFB31556E25FF7A790040C"
+	"Thumbprint": "0e9033d7e4365cd5b53ffb1f7e4efa125110db28"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVAccount;",
-    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server;Port=5432;Database=AVIdentityServer;"
+    "AVAccount": "User ID=admin;Password=PaSSW0rd123!;Host=server.local;Port=5432;Database=AVAccount;",
+    "AVIdentityServer": "User ID=admin;Password=PaSSW0rd123!;Host=server.local;Port=5432;Database=AVIdentityServer;"
   },
   "RabbitMQ": {
-    "Uri": "amqp://admin:PaSSW0rd123!@server:5672/",
-    "DevUri": "amqp://admin:PaSSW0rd123!@server:5672/dev",
+    "Uri": "amqp://admin:PaSSW0rd123!@server.local:5672/",
+    "DevUri": "amqp://admin:PaSSW0rd123!@server.local:5672/dev",
     "HostName": "rabbitmq",
     "VirtualHost": "/",
     "Port": 5672,
     "UserName": "admin",
     "Password": "PaSSW0rd123!"
+  },
+  "AccountTokenConfirmationUrls": {
+    "EmailConfirmationUrl": "https://localhost:5005/Account/EmailConfirmation",
+    "AccountRecoveryUrl": "https://localhost:5005/Account/PasswordReset"
   },
   "AccountOptions": {
     "AllowLocalLogin": "true",
