--- a/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
+++ b/AVStack.IdentityServer.WebApi/AVStack.IdentityServer.WebApi.csproj
@@ -11,7 +11,6 @@
         <PackageReference Include="AVStack.MessageBus.Abstraction" Version="1.1.0" />
         <PackageReference Include="AVStack.MessageBus.Extensions" Version="1.1.0" />
         <PackageReference Include="AVStack.MessageBus.RabbitMQ" Version="1.1.0" />
-        <PackageReference Include="bootstrap" Version="5.2.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
         <PackageReference Include="IdentityServer4" Version="4.1.2" />
         <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
@@ -26,6 +25,7 @@
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
@@ -38,7 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Services\Interfaces" />
+      <Folder Include="wwwroot\lib\bootstrap" />
     </ItemGroup>
 
 </Project>
